# atcoder-readme-stats

./: .gitignore  README.md  pyproject.toml  requirements.txt  serverless.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy.yml  layer.yml  main.yml  test.yml
api/v1/: generate_badge.py  utils.py
lambdas/v1/generate_badge/: __init__.py  main.py
lambdas/v2/generate_badge/: __init__.py  fonts.py  main.py
shared/: utils.py
terraform/: .gitignore  .terraform.lock.hcl  main.tf  variable.tf
tests/: test_utils.py  test_v1_generate_badge.py  test_v2_generate_badge.py
