[project]
name = "atcoder-readme-stats"
version = "2.0.1"
description = "Atcoder Readme Stats"
authors = [
    {name = "junah201", email = "junah.dev@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "requests>=2.28.2,<3.0.0",
    "beautifulsoup4>=4.12.2,<5.0.0",
]

[project.urls]
Homepage = "https://github.com/junah201/atcoder-readme-stats"
Repository = "https://github.com/junah201/atcoder-readme-stats"

[dependency-groups]
test = [
    "pytest>=8.2.2,<9.0.0",
    "pytest-mock>=3.15.1",
]

[tool.uv]
package = false
