[project]
name = "atcoder-readme-stats"
version = "2.0.1"
description = "Atcoder Readme Stats"
authors = [
    {name = "junah201", email = "junah.dev@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "requests>=2.28.2,<3.0.0",
    "beautifulsoup4>=4.12.2,<5.0.0",
]

[project.urls]
Homepage = "https://github.com/junah201/atcoder-readme-stats"
Repository = "https://github.com/junah201/atcoder-readme-stats"

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]
test = [
    "pytest>=8.2.2,<9.0.0",
    "pytest-mock>=3.15.1",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]
